appended weather cards with data inside

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@ THEN I am again presented with current and future conditions for that city -->
     <main>
         <aside class="m-3">
             <form class="border-bottom pb-3">
-                <label class="form-label">Search for a City:</label>
+                <h2 class="form-label">Search for a City:</h2>
                 <input class="form-control mb-3" type="text" id="user-city-name">
                 <button id = 'search-button' class="btn btn-primary w-100">Search</button>
             </form >
         </aside>
         <section class="border border-black">
-            <h2 id="city-name"></h2>
+            <h3 id="city-name"></h3>
             <p>Temp: <span id="temperature"></span></p>
             <p>Wind: <span id="wind-speeds"></span></p>
             <p>Humidity: <span id="humidity"></span></p>
         </section>
-        <section>
+        <section id="5-day-forecast">
             <h3>5-Day Forecast:</h3>
         </section>
     </main>
